# next-project

./: .dockerignore  .gitignore  .npmrc  .prettierignore  AGENTS.md  API_MIGRATION_CHECKLIST.md  LICENSE.md  Makefile  README.md  docker-compose.actions.yml  docker-compose.prod.yml  docker-compose.watchtower.yml  docker-compose.yml  improvements.md  knip.json  knip.jsonc  opencode.json  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  renovate.json  skills-lock.json  task.md  tasks.md  turbo.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/actions/has-changed/: README.md  action.yml
.github/actions/playwright-setup/: action.yml
.github/workflows/: cd.yml  docker-publish.yml  lint-check.yml  lint.yml  playwright-api.yml  playwright-sign-up-enabled.yml  playwright-sign-up.disabled.yml  playwright.yml  test.yml
.opencode/agent/: deslopify.md  github-create-issue.md  github-issue-create.md  github-issue-work.md  github-issue.md  github-pr-rebase.md  playwright-tester.md
.opencode/prompts/: playwright-test-generator.md  playwright-test-healer.md  playwright-test-planner.md
.opencode/skills/spss-file-convert/: SKILL.md  convert_spss.py
.opencode/skills/turborepo/: SKILL.md
.windsurf/rules/: general.md  tech-stack.md  web-app.md
apps/analysis/: .env.dist  AGENTS.md  Dockerfile  README.md  package.json  pyproject.toml
apps/analysis/analysis/: __main__.py  gunicorn_runner.py  log.py  settings.py
apps/analysis/analysis/db/: base.py  utils.py
apps/analysis/analysis/db/models/: __init__.py  models.py
apps/analysis/analysis/services/: __init__.py  dataset_cache.py  excel_export.py  powerpoint_export.py  s3_client.py  stats.py
apps/analysis/analysis/tests/services/: test_dataset_cache.py  test_excel_export.py  test_powerpoint_export.py  test_s3_client.py  test_stats.py
apps/analysis/analysis/tests/web/: test_routes.py
apps/analysis/analysis/web/: __init__.py  application.py  lifespan.py
apps/analysis/analysis/web/api/: __init__.py  health.py  ready.py  router.py  security.py
apps/analysis/analysis/web/api/datasets/: __init__.py  routes.py
apps/analysis/analysis/web/api/schemas/: __init__.py  datasets.py
apps/analysis/sandbox/: descriptives.py  powerpoint.py  xlsx.py
apps/analysis/scripts/: check_s3.py
apps/web/: .env.dist  .gitignore  AGENTS.md  Dockerfile  README.md  components.json  eslint-plugins.d.ts  eslint.config.js  eslint.config.ts  next.config.js  package.json  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
apps/web/messages/: de.json  en.json
apps/web/scripts/: README.md  check-translations.ts  cli.ts  seed.ts
apps/web/src/: env-schema.test.ts  env-schema.ts  env.ts  global.d.ts  global.ts  instrumentation-client.ts  middleware.ts  proxy.ts
apps/web/src/dal/: dal.ts  (+16 more)
data/spss/: adl.sav  advert.sav  bankloan.sav  car_sales.sav  customer_dbase.sav  demo.sav  dietstudy.sav  oss_survey.sav  satisf.sav
docker/: s3cfg.local
docker/backup/: Dockerfile  backup-entrypoint.sh  database-backup.sh  run-backup.sh
docker/caddy/prod/: Caddyfile
docker/postgres/: init.sql
e2e/: .gitignore  config.ts  package-lock.json  package.json  utils.ts
e2e/tests/: admin-users.spec.ts  api-access-members.spec.ts  api-access-organizations.spec.ts  api-access-projects.spec.ts  api-access-users.spec.ts  auth-locale-switcher.spec.ts  auth-login.spec.ts  auth-sign-up.spec.ts  membership.spec.ts  user-account.spec.ts
plans/: 0001_invite_users_spec.md  feature_prompt.md
(+511 files in other folders)
