[project]
name = "analysis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
  "asyncpg>=0.31.0,<0.32.0",
  "boto3>=1.39.0,<2.0.0",
  "fastapi>=0.138.2,<0.139.0",
  "greenlet>=3.3.1,<4.0.0",
  "gunicorn>=26.0.0,<27.0.0",
  "httptools>=0.8.0,<0.9.0",
  "loguru>=0.7.3,<0.8.0",
  "openpyxl>=3.1.5,<4.0.0",
  "pandas>=3.0.0,<4.0.0",
  "pydantic>=2.10.4,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "pymongo>=4.10.1,<5.0.0",
  "pyreadstat>=1.3.0,<2.0.0",
  "python-pptx>=1.0.2,<2.0.0",
  "sentry-sdk[fastapi]>=2.32.0,<3.0.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
  "ujson>=5.10.0,<6.0.0",
  "uvicorn[standard]>=0.49.0,<0.50.0",
  "yarl>=1.18.3,<2.0.0",
]

[dependency-groups]
dev = [
  "anyio>=4,<5",
  "black>=26.0.0,<27.0.0",
  "httpx>=0.28.0,<0.29.0",
  "mypy>=2.0.0,<3.0.0",
  "pre-commit>=4.0.0,<5.0.0",
  "pytest>=9.0.0,<10.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "pytest-env>=1.1.3,<2.0.0",
  "ruff>=0.15.0,<0.16.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["analysis"]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore:.*unclosed.*:ResourceWarning",
]
env = ["ANALYSIS_ENVIRONMENT=pytest", "ANALYSIS_DB_BASE=analysis_test"]

[tool.ruff]
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
lint.select = [
  "E",   # Error
  "F",   # Pyflakes
  "W",   # Pycodestyle
  "C90", # McCabe complexity
  "I",   # Isort
  "N",   # pep8-naming
  "D",   # Pydocstyle
  "ANN", # Pytype annotations
  "S",   # Bandit
  "B",   # Bugbear
  "COM", # Commas
  "C4",  # Comprehensions
  "ISC", # Implicit string concat
  "PIE", # Unnecessary code
  "T20", # Catch prints
  "PYI", # validate pyi files
  "Q",   # Checks for quotes
  "RSE", # Checks raise statements
  "RET", # Checks return statements
  "SLF", # Self checks
  "SIM", # Simplificator
  "PTH", # Pathlib checks
  "ERA", # Checks for commented out code
  "PL",  # PyLint checks
  "RUF", # Specific to Ruff checks
]
lint.ignore = [
  "D103",    # Missing docstring in public function
  "COM812",
  "D101",
  "D105",    # Missing docstring in magic method
  "D107",    # Missing docstring in __init__
  "B008",    # Do not perform function calls in argument defaults
  "D211",    # No blank lines allowed before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "D401",    # First line should be in imperative mood
  "D104",    # Missing docstring in public package
  "D100",    # Missing docstring in public module
  "D202",    # No blank lines allowed after function docstring
  "D205",
  "ANN401",  # typing.Any are disallowed in `**kwargs
  "PLR0913", # Too many arguments for function call
  "D106",    # Missing docstring in public nested class
  "E501",    # Line too long - ignore line length checks
]
exclude = ["analysis/db/migrations", ".venv/"]
lint.mccabe = { max-complexity = 10 }
line-length = 88

[tool.ruff.lint.per-file-ignores]
"analysis/tests/*" = [
  "S101",   # Use of assert detected
  "ANN001", # Missing type annotation for function argument (pytest fixtures)
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis"]
